chore: create solution projects

--- a/src/Lottery.Infrastructure/Lottery.Infrastructure.csproj
+++ b/src/Lottery.Infrastructure/Lottery.Infrastructure.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
-        <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1"/>
+      <ProjectReference Include="..\Lottery.Domain\Lottery.Domain.csproj" />
     </ItemGroup>
 
 </Project>
