chore: setup postgres for local development

--- a/src/LottoManager.Api/appsettings.Development.json
+++ b/src/LottoManager.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection":"Host=localhost;Port=5432;Database=lottomanager;Username=admin;Password=strong_password_here;Pooling=true"
   }
 }
