--- a/src/LottoManager.Application/LottoManager.Application.csproj
+++ b/src/LottoManager.Application/LottoManager.Application.csproj
@@ -17,6 +17,8 @@
 
     <ItemGroup>
       <PackageReference Include="FluentValidation" Version="12.1.1" />
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.1" />
     </ItemGroup>
 
 </Project>
