--- a/src/LottoManager.Contracts/LottoManager.Contracts.csproj
+++ b/src/LottoManager.Contracts/LottoManager.Contracts.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\LottoManager.Domain\LottoManager.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
