--- a/src/LottoManager.Infrastructure/LottoManager.Infrastructure.csproj
+++ b/src/LottoManager.Infrastructure/LottoManager.Infrastructure.csproj
@@ -10,4 +10,16 @@
       <ProjectReference Include="..\LottoManager.Domain\LottoManager.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Data\Migrations\" />
+    </ItemGroup>
+
 </Project>
